--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.2.14",
     "@types/node": "^13.13.4",
     "mem": "^6.0.1",
+    "minimist": "^1.2.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
